rudy-db/tests/snapshots/live_introspection__introspect_enums.snap
---
source: rudy-db/tests/live_introspection.rs
expression: unit_value
snapshot_kind: text
---
Scalar {
    ty: "TestEnum::Unit",
    value: "Unit",
}
