rudy-db/tests/snapshots/live_introspection__introspect_option.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
snapshot_kind: text
---
Scalar {
    ty: "Option<u32>",
    value: "42",
}
