rudy-db/tests/snapshots/live_introspection__introspect_smart_pointers-2.snap
---
source: rudy-db/tests/live_introspection.rs
expression: arc_value
snapshot_kind: text
---
Array {
    ty: "Arc<Vec<i32>>",
    items: [
        Scalar {
            ty: "i32",
            value: "1",
        },
        Scalar {
            ty: "i32",
            value: "2",
        },
        Scalar {
            ty: "i32",
            value: "3",
        },
    ],
}
