rudy-db/tests/snapshots/live_introspection__introspect_smart_pointers-3.snap
---
source: rudy-db/tests/live_introspection.rs
expression: rc_value
snapshot_kind: text
---
Scalar {
    ty: "Rc<i32>",
    value: "42",
}
