rudy-db/tests/snapshots/live_introspection__introspect_smart_pointers-4.snap
---
source: rudy-db/tests/live_introspection.rs
expression: mutex_value
snapshot_kind: text
---
Scalar {
    ty: "Mutex<i32>",
    value: "42",
}
