rudy-db/tests/snapshots/live_introspection__introspect_smart_pointers-5.snap
---
source: rudy-db/tests/live_introspection.rs
expression: cell_value
snapshot_kind: text
---
Scalar {
    ty: "RefCell<i32>",
    value: "100",
}
