rudy-db/tests/snapshots/live_introspection__introspect_smart_pointers.snap
---
source: rudy-db/tests/live_introspection.rs
expression: box_value
snapshot_kind: text
---
Scalar {
    ty: "Box<String>",
    value: "\"Boxed string\"",
}
