rudy-db/tests/snapshots/live_introspection__introspect_string.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
snapshot_kind: text
---
Scalar {
    ty: "String",
    value: "\"Hello, Debugger!\"",
}
