rudy-db/tests/snapshots/live_introspection__introspect_vec.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
snapshot_kind: text
---
Array {
    ty: "Vec<i32>",
    items: [
        Scalar {
            ty: "i32",
            value: "10",
        },
        Scalar {
            ty: "i32",
            value: "20",
        },
        Scalar {
            ty: "i32",
            value: "30",
        },
        Scalar {
            ty: "i32",
            value: "40",
        },
        Scalar {
            ty: "i32",
            value: "50",
        },
    ],
}
